--- a/QubicRed/packages.config
+++ b/QubicRed/packages.config
@@ -1,12 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BouncyCastle" version="1.7.0" targetFramework="net461" />
-  <package id="Dropbox.Api" version="3.4.0" targetFramework="net461" />
+  <package id="BouncyCastle" version="1.8.1" targetFramework="net461" />
   <package id="EngineIoClientDotNet" version="0.9.22" targetFramework="net452" />
-  <package id="log4net" version="2.0.3" targetFramework="net461" />
-  <package id="MegaApiClient" version="1.2.2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net452" />
+  <package id="log4net" version="2.0.5" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="SocketIoClientDotNet" version="0.9.13" targetFramework="net452" />
+  <package id="SSH.NET" version="2013.4.7" targetFramework="net461" />
   <package id="WebSocket4Net" version="0.14.1" targetFramework="net452" />
   <package id="Zlib.Portable.Signed" version="1.11.0" targetFramework="net461" />
 </packages>
