--- a/QubicRed/QubicRed.csproj
+++ b/QubicRed/QubicRed.csproj
@@ -23,6 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -86,6 +87,24 @@
     <Compile Include="Apps\Messenger.Designer.cs">
       <DependentUpon>Messenger.cs</DependentUpon>
     </Compile>
+    <Compile Include="Apps\StartMenu\StartMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Apps\StartMenu\StartMenu.Designer.cs">
+      <DependentUpon>StartMenu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Apps\Taskbar\Taskbar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Apps\Taskbar\Taskbar.Designer.cs">
+      <DependentUpon>Taskbar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Boot.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Boot.Designer.cs">
+      <DependentUpon>Boot.cs</DependentUpon>
+    </Compile>
     <Compile Include="Components\QRSocket.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -93,6 +112,9 @@
       <DependentUpon>QRSocket.cs</DependentUpon>
     </Compile>
     <Compile Include="CustomControls\ClickThroughPanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="CustomControls\CustomizableTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="CustomControls\Messenger\FriendBlock.cs">
@@ -111,8 +133,22 @@
     <Compile Include="CustomControls\RoundedPictureBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Desktop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Desktop.Designer.cs">
+      <DependentUpon>Desktop.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Environment.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="GraphicsExtension.cs" />
+    <Compile Include="GraphicsExtensions.cs" />
+    <Compile Include="Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QRDF.cs">
@@ -121,8 +157,24 @@
     <Compile Include="QRDF.Designer.cs">
       <DependentUpon>QRDF.cs</DependentUpon>
     </Compile>
+    <Compile Include="Win32.cs" />
     <EmbeddedResource Include="Apps\Messenger.resx">
       <DependentUpon>Messenger.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Apps\StartMenu\StartMenu.resx">
+      <DependentUpon>StartMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Apps\Taskbar\Taskbar.resx">
+      <DependentUpon>Taskbar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Boot.resx">
+      <DependentUpon>Boot.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Desktop.resx">
+      <DependentUpon>Desktop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -207,6 +259,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Messenger\send_disabled.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BootLoop.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
